# dynamic-eq

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
Source/: DynamicBand.cpp  DynamicBand.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  SpectrumAnalyser.cpp  SpectrumAnalyser.h
